# sftp-documents-provider

./: README.md  local.properties
Application/: build.gradle
Application/src/main/: AndroidManifest.xml
Application/src/main/cpp/: CMakeLists.txt  libssh2_bindings.cpp
Application/src/main/cpp/libssh2/arm64-v8a/lib/: libssh2.la
Application/src/main/cpp/libssh2/arm64-v8a/lib/pkgconfig/: libssh2.pc
Application/src/main/java/com/aguaviva/android/libssh2/: Cache.java  Connection.java  SFTP.java  SFTPMT.java  SFTP_Auth.java  SFTP_retry.java  SftpFile.java  SftpProxyFileDescriptorCallback.java  SftpSession.java  Ssh2.java  helpers.java
Application/src/main/java/com/aguaviva/android/sftpstorageprovider/: ActivityFormConnection.java  ActivityFormKey.java  ActivityFromConnection.java  ActivityListConnections.java  ActivityListKeys.java  ActivityLog.java  ActivityNetworkGraph.java  ActivityShareReceiver.java  ActivityShowDebugLog.java  ActivityTest.java  ActivityTestConnection.java  Connection.java  ConnectionManagerActivity.java  DebugActivity.java  SFTP.java  (+13 more)
Application/src/main/res/layout/: activity_connection_manager.xml  activity_debug.xml  activity_key_form.xml  activity_key_manager.xml  activity_main.xml  activity_network_graph.xml  activity_share_receiver.xml  activity_test.xml  activity_test_connection.xml  list_item_progress.xml
Application/src/main/res/menu/: main.xml
Application/src/main/res/values/: app_strings.xml  base-strings.xml  colors.xml  strings.xml  styles.xml  template-styles.xml
Application/src/main/res/values-sw600dp/: template-styles.xml
(+12 files in other folders)
